<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="27dp">

    <TextView
        android:text="@string/app_name"
        android:textSize="33sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FFF4BA"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:padding="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_letters"
            android:contentDescription="@string/desc_letters"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/btnNature"
            android:text="@string/nature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:textSize="25sp"
            android:gravity="start"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#FF4A5F"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:padding="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_numbers"
            android:contentDescription="@string/desc_numbers"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/btnAnimals"
            android:text="@string/animals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:textSize="25sp"
            android:gravity="start"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#CECCD0"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_colors"
            android:contentDescription="@string/desc_colors"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/btnColors"
            android:text="@string/colors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="#000000"
            android:textSize="25sp"
            android:gravity="start"/>
    </LinearLayout>
</LinearLayout>